fix:background-color

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Yatra One', cursive;
     /* font-family: 'BioRhyme', serif; */
-    background-color: burlywood;
+    background-color: rgb(192, 175, 154);
     overflow-x: hidden;
 }
 
