--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ body {
 .social-icons ul li i:hover {
     cursor: pointer;
     transform: scale(1.2);
+    transition: transform 500ms;
 }
 
 .small {
@@ -191,7 +192,9 @@ body {
     .sweg-image {
         max-width: 5rem;
     }
-    
+    .footer {
+        font-size: 2rem;
+    }
     
    
 }
