--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=BioRhyme&display=swap');
 
+
+:root {
+    --bgcolor:rgb(207, 167, 117);
+    --footcolor:rgb(204, 158, 102);
+}
 * {
     padding: 0;
     margin:0;
@@ -8,7 +13,7 @@
 body {
     font-family: 'Yatra One', cursive;
     /* font-family: 'BioRhyme', serif; */
-    background-color: rgb(207, 167, 117);
+    background-color: var(--bgcolor);
     overflow-x: hidden;
 }
 
@@ -119,7 +124,7 @@ body {
 
 .footer {
     width: 100%;
-    background-color: sandybrown;
+    background-color: var(--footcolor);
     padding:1rem;
     margin: 0rem;
     display: flex;
